# haskoli-islands

./: .coderabbit.yaml  .condarc  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENCE.md  LIST_OF_HOVER_TERMS  LIST_OF_HOVER_TERMS.json  Makefile  README.md  VERSIONED_DOCS_PROPOSAL.md  `  environment.yml  prompt.md  pulsAll.csv  pyproject.toml  test-deploy.md  versioned-docs.yml
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/: CODEOWNERS  affected.sh  build-affected.sh  deploy.sh  discord.sh  slugify.sh
.github/workflows/: build-docs-optimized.yml  build-docs.yml  comment.yml  feature.yml  issue.yml  new-issue.yml  pr-merge.yml  pr.yml  push-new.yml  push.yml  release-new.yml  release.yml  versioned-docs.yml
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1755843878019-qlhiuro6q.txt  session-1755843878021-004ukcug4-auto-save-1755843908022.json
.vscode.example/: settings.json
_build/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: environment.pickle
_build/R_fra_grunni/: .buildinfo  index.html  objects.inv  searchindex.js
_build/_static/: documentation_options.js
_build/forsida/: .buildinfo  index.html  objects.inv  searchindex.js
_build/python/: .buildinfo  index.html  objects.inv  searchindex.js
_build/rei201g/: .buildinfo  index.html  objects.inv  searchindex.js
_build/source/: Kafli01.html  Kafli02.html  Kafli03.html  Kafli04.html  Kafli05.html  Kafli06.html  Kafli07.html  Kafli08.html  Kafli09.html  Kafli10.html  Kafli11.html  Kafli12.html  formali.html  index.html
_build/stae104g/: .buildinfo  index.html  objects.inv  searchindex.js
_build/stae105g/: .buildinfo  index.html  objects.inv  searchindex.js
_build/stae205g/: .buildinfo  index.html  objects.inv  searchindex.js
_build/stae302g/: .buildinfo  index.html  objects.inv  searchindex.js
_build/stae401g/: .buildinfo  index.html  objects.inv  searchindex.js
_build/stae405g/: .buildinfo  index.html  objects.inv  searchindex.js
_build/tmp001g/: .buildinfo  index.html  objects.inv  searchindex.js
_build/tolfraedi_fra_grunni/: .buildinfo  index.html  objects.inv  searchindex.js
_build/undirbuningur_edl/: .buildinfo  index.html  objects.inv  searchindex.js
_build/undirbuningur_efn/: .buildinfo  index.html  objects.inv  searchindex.js
_build/undirbuningur_stae/: .buildinfo  index.html  objects.inv  searchindex.js
cli/: __main__.py  main.py  setup.py
cli/edbook/: main.py  settings.py
docs/: Kafli06.rst  Kafli10.rst  Makefile  conf.py  index.rst  ~tmp52_conf.py
docs/myndir/: frth270.fls  hlidrun1.tex  samsid.tex  triangle1.tex
docs/source/: formali.rst
extensions/custom-button/: setup.py
extensions/datacamp-extension/: README.md  datacamp-custom.css  setup.py
extensions/ggbextension/: setup.py
extensions/google-analytics/: setup.py
hicli/: README.md  main.py  server.py  utils.py
hicli/tests/: test_hi_cli.py
projects/: .release-trigger-test
projects/R_fra_grunni/: Differences.txt  README.md  conf.py  config.yml  formali.rst  index.rst  kafli01.rst  kafli02.rst  kafli03.rst  kafli03_final.rst  kafli04.rst  kafli05.rst  kafli05_final.rst  kafli06.rst  kafli06_final.rst  kafli07.rst  kafli08.rst  kafli09.rst  kafli10.rst  kafli11.rst  kafli12.rst  kafli13.rst  ordalistar.rst  um_R_leiksvaedi.rst  um_hofunda.rst
projects/Tolfraedi_fra_grunni/: Differences.txt  Makefile  conf.py  extension_names  index.rst  kafli05.rst  kafli08.rst  kafli09.rst  kafli10.rst  svor_final.rst
projects/analysis_1/: kafli04.rst  kafli05.rst  kafli08.rst  kafli09.rst  vidauki.rst_pre2020
projects/byg302g/: conf.py  config.yml  daemifraBenna  extension_names  fjollidur.rst  gler.rst  heimildir.rst  index.rst  kafli01.rst  kafli02.rst  kafli03.rst  kafli04.rst  kafli05.rst  kafli06.rst  kafli07.rst  kafli08.rst  kafli09.rst  kafli10.rst  kafli11.rst  kafli13.rst  kafli14.rst  refs.bib  stal.rst
projects/byg601g/: README.md  conf.py  config.yml  kafli01.rst  kafli02.rst  kafli03.rst  kafli04.rst  kafli05.rst  kafli06.rst  kafli07.rst  kafli08.rst  kafli09.rst  kafli10.rst
projects/forsida/: Makefile  README.md  conf.py  config.yml  index.rst
projects/foundation/: Kafli01.rst  Kafli05.rst  Kafli12.rst
projects/fyrirollx/: config.yml  index.rst  kafli01.rst  kafli02.rst  kafli05.rst  kafli07.rst  kafli08.rst  kafli09.rst  kafli10.rst
projects/python/: Makefile  aldur-feðra.xlsx  aðfluttir.xlsx  conf.py  config.yml  dánir.xlsx  glosur.txt  kafli01.rst  kafli02.rst  kafli03.rst  kafli04.rst  kafli07.rst  kafli08.rst  kafli09.rst  kafli10.rst  kafli11.rst  kafli12.rst  kafli13.rst  kafli14.rst  kafli15.rst  kafli16.rst  readme.txt  verkefnafyrirsogn.rst  verkefni.rst
projects/rei201g/: Makefile  README.md  batur.m  conf.py  config.yml  contour3d.m  copy-to-cs  forritssnið.xlsx  index.rst  kafli01.html  kafli01.rst  kafli02.rst  kafli03.rst  kafli05.rst.keep  letterdef.txt  plotein.m  plotspan.m  pr.m  rst-include  stafrof.m  stafrof.txt  stigull.m  verkefni.rst  vidauki-A.rst  x.txt
projects/stae000g/: config.yml  index.rst  kafli05.rst
projects/stae104g/: README.md  conf.py  config.yml  index.rst  kafli01.rst  kafli02.rst  kafli03.rst  kafli04.rst  kafli05.rst  kafli06.rst  kafli07.rst  kafli08.rst  kafli09.rst  kafli10.rst  vidauki.rst
projects/stae105g/: README.md  conf.py  config.yml  extension_names  formali.rst  index.rst  kafli01.rst  kafli02.rst  kafli03.rst  kafli04.rst  kafli05.rst  kafli06.rst  kafli07.rst  kafli08.rst  kafli09.rst  kafli10.rst  kafli_linuleg_algebra.rst  umnamskeidid.rst
projects/stae107g/: README.md  conf.py  config.yml  formali.rst  index.rst  kafli01.rst  kafli02.rst  (+5 more)
projects/tolfraedi_fra_grunni/: README.md  Todo for latex version  conf.py  config.yml  index.rst  kafli06.rst  kafli07.rst  ordalistar.rst  pyproject.toml  thakkir.rst  toflur_all_final.rst
projects/tolfraedi_fra_grunni/for_latext_version/: create_Tolfraedi_fra_grunni
scripts/: cleanup.sh
settings/: __init__.py  settings.py
(+2248 files in other folders)
