[tool.poetry]
name = "edbook"
version = "0.1.0"
description = ""
authors = ["Benedikt Magnússon og fleiri"]

packages = [
    { include = "cli" }
]

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39']
experimental_string_processing = true

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "src/__version__.py",
    "pyproject.toml:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.3.2"}
seedir = "^0.1.2"
pypandoc = "^1.5"
Sphinx= "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
sphinxcontrib-katex = "^0.6.1"
paramiko= "^2.7.2"

panoptoextension = {path = "src/extensions/panoptoextension", develop = true}
sagecell = {path = "src/extensions/sagecell-extension", develop = true}
ggbextension = {path = "src/extensions/ggbextension", develop = true}
scrolldepthextension = {path = "src/extensions/SphinxScrolldepth", develop = true}
hoverroleextension = {path = "src/extensions/hoverrole", develop = true}
toggleblock = {path = "src/extensions/toggleblock-extension", develop = true}
custom-button = {path = "src/extensions/custom-button", develop = true}
datacamp = {path = "src/extensions/datacamp-extension", develop = true}
google-analytics = {path = "src/extensions/google-analytics", develop = true}
sphinx-togglebutton = "^0.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
pylint = "^2.9"
black = "^20.8b1"
rstcheck = "^3.3.1"
sphinx-autobuild = "^2020.9.1"
commitizen = "^2.13"
typer = "^0.3"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
isort = "^5.9.3"

[tool.poetry.scripts]
cli = "cli.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
